    IOError exception saying that too many files are open. This causes
    restores to fail randomly, after thousands of files have been restored.
* Fixed bug #1320641 and others regarding lockfile
  - swap from lockfile to fasteners module
  - use an fcntl() style lock for process lock of duplicity cache
  - lockfile will now clear if duplicity is killed or crashes


New in v0.7.12 (2017/03/21)
---------------------------
* Fixed bug #1623342 with patch supplied by Daniel Jakots
  - Failing test on OpenBSD because tar/gtar not found
* Fixed bug #1654220 with patch supplied by Kenneth Newwood
  - Duplicity fails on MacOS because GPG version parsing fails
* Fixed bug #1655268 "--gpg-binary option not working"
  - If gpg binary is specified rebuild gpg profile using new binary location
* Fixed bug #1658283 "Duplicity 0.7.11 broken with GnuPG 2.0"
  - Made gpg version check more robust than just major version
  - Now use --pinentry-mode=loopback on gpg 2.1 and greater
  - Removed check for non-Linux systems, a false problem
* Merged in lp:~matthew-t-bentley/duplicity/duplicity
  - Sets a user agent. Backblaze asked for this in case there are errors that originate
    from the Duplicity B2 backend
  - Only retrieves a new upload URL when the current one expires, to bring it in line
    with their best practices for integrations: https://www.backblaze.com/b2/docs/integration_checklist.html
* Add detail about import exceptions in onedrivebackend.py
* Fixed bug #1657916 with patch supplied by Daniel Harvey
  - B2 provider cannot handle two backups in the same bucket
* Fixed bug #1603704 with patch supplied by Maciej Bliziński
  - Crash with UnicodeEncodeError
* Some fixes to gpg.py to handle gpg1 & gpg2 & gpg2.1 commandline issues
  - --gpg-agent is optional on gpg1, but on gpg2 it is used automatically
  - --pinentry-mode is not a valid opt until gpg2.1, so condition on that
* Fixed bug #1367675 - IMAP Backend does not work with Yahoo server