@@ -16,6 +16,14 @@ New in v0.7.13 (2017/??/??)
   - swap from lockfile to fasteners module
   - use an fcntl() style lock for process lock of duplicity cache
   - lockfile will now clear if duplicity is killed or crashes
+* May have finally fixed bug #1556553, "Too many open files...".
+  - Applied patch from Howard Kaye, question #631423.  The fix is to dup
+    the file descriptor, and then close the file in the deallocator
+    routine in the glue code. Duping the file lets the C code and the Python
+    code each close the file when they are done with it.
+  - Invalidated and removed the fix put in for bug #1320832.
+  - Caveat: long incremental chains will still eat up a large number of file
+    descriptors.  It's a very risky practice, so I'm not inclined to fix it.
 
 
 New in v0.7.12 (2017/03/21)
